# syncthing-tray

./: .gitignore  README.md  pyproject.toml
src/syncthing_tray/: __init__.py  build.py  main.py
